Add Multi Language

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -84,6 +84,9 @@
       },
       "frameworks": {
         "name": "Frameworks Or Tools"
+      },
+      "contacts": {
+        "name": "Contacts Me"
       }
   }
   
