--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -84,6 +84,9 @@
       },
       "frameworks": {
         "name": "Frameworks Atau Alat Yang Dikuasai"
+      },
+      "contacts": {
+        "name": "Hubungi Saya"
       }
   }
   
