Add Multi Language

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -6,7 +6,7 @@
       "portfolio": "Portfolio",
       "projects": "Projects",
       "frameworks": "Frameworks",
-      "languages": "Languages"
+      "languages": "Programming"
     },
     "hero": {
       "title": "Preventing bugs is better than finding them.",
